--- a/package.json
+++ b/package.json
@@ -7,12 +7,18 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@vueuse/motion": "^2.0.0-beta.12",
     "core-js": "^3.8.3",
+    "firebase": "^9.15.0",
+    "loadash": "^1.0.0",
     "vue": "^3.2.13",
+    "vue-csv-import": "^4.1.2",
     "vue-router": "^4.0.3",
-    "vuex": "^4.0.0"
+    "vuex": "^4.0.0",
+    "x2js": "^3.4.4"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.191",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-plugin-typescript": "~5.0.0",
